# personalrobots-pkg

./: README  august-cleanup.py  clean_rosgazebo.scp
calibration/kinematic_calibration/: CMakeLists.txt  ROS_BUILD_BLACKLIST  joint_names_pr2_gazebo.xml  manifest.xml
calibration/kinematic_calibration/demo/: arm_head_traj_controller.xml  arm_traj_controller.xml  auto_commander.launch  blob_tracker.launch  blob_tracker.xml  commander.launch  controllers.launch  cycle_calibration.launch  cycle_calibration.py  grab_cb_stereo_laser_robot.launch  prosilica.launch  videre.launch
calibration/kinematic_calibration/deprecated/: camera_cal_sampler.h  image_point_cache.h  mech_state_cache.h  state_history.h
calibration/kinematic_calibration/msg/: CalSnapshot.msg  CalibrationData.msg  CalibrationData2.msg  CameraCalSample.msg  RobotCal.msg  SensorKinematics.msg
calibration/kinematic_calibration/scripts/: arm_commander.py  arm_commander_node.py  auto_arm_commander.py  auto_arm_commander_original.py  build_mech_state_file.py  goto_next.py  joy_cmd_head.py  joy_goto_next.py  new_cmd_node.py  unpack.py
calibration/kinematic_calibration/src/: add_calibration_data.cpp  arm_commander.py  arm_phasespace_grabber.cpp  camera_cal_sampler.cpp  chain_modifier.cpp  jac_newmat_bridge.cpp  laser_head_grabber.cpp  led_tracker.cpp  link_param_jacobian.cpp  link_param_jacobian_solver.cpp  run_chain_dumper.cpp  sensor_kinematics_grabber.cpp  unittest_io.cpp  verify_jacobian.cpp
calibration/kinematic_calibration/test/: CMakeLists.txt  bridge_unittest.cpp  chain_modifier_unittest.cpp  error_vec_marker_3d_unittest.cpp  estimator_marker_3d_unittest.cpp  jacobian_unittest.cpp  msg_cache_unittest.cpp
common/bullet/: CMakeLists.txt  Makefile.bullet  demos.patch  manifest.xml  quaternion.patch
common/bullet/test/: bullet_unittest.py
common/tf/: CMakeLists.txt  mainpage.dox  manifest.xml
common/tf/src/: tf.cpp  tf_echo.cpp  tf_monitor.cpp  transform_broadcaster.cpp  transform_listener.cpp  transform_sender.cpp
common/tf/test/: python_debug_test.py  testBroadcaster.cpp  test_notifier.cpp  test_permuter.cpp  tf_benchmark.cpp  tf_unittest.cpp
common/tf/tutorials/: complete_tutorial.launch  earth_tracker.cpp  shuttle_observer.cpp  space_shuttle_tracker.cpp  tutorial.dox  tutorial_listener.cpp
controllers/pr2_controllers/: CMakeLists.txt  manifest.xml
controllers/pr2_controllers/msg/: JointPosCmd.msg
controllers/pr2_controllers/src/: arm_controller.cpp  arm_position_controller.cpp  arm_velocity_controller.cpp  base_controller.cpp  laser_scanner_controller.cpp  laser_scanner_qualification.cpp
controllers/pr2_controllers/srv/: GetArmCommand.srv  GetCartesianVelCmd.srv  GetJointGains.srv  GetJointPosCmd.srv  SetCartesianPosCmd.srv  SetJointPathCmd.srv
controllers/pr2_controllers/test/: test_base_controller.cpp
controllers/pr2_mechanism_controllers/: CMakeLists.txt  controller_plugins.xml  doc.dox  manifest.xml
controllers/pr2_mechanism_controllers/msg/: JointTraj.msg  JointTrajPoint.msg  (+3 more)
controllers/robot_mechanism_controllers/: CMakeLists.txt  controller_plugins.xml  manifest.xml
controllers/testControllers/: CMakeLists.txt  ROS_BUILD_BLACKLIST  manifest.xml
deprecated/dc1394_cam/: CMakeLists.txt  manifest.xml
deprecated/exec_trex/: CMakeLists.txt  CalcGraspPositionConstraint.cc  CalcInterpolatedEndEffectorPosConstraint.hh  ExecDefs.cc  ExecDefs.hh  Executive.hh  LogClock.hh  NDDL.cfg  RCSAdapter.hh  RCSVelAdapterPlayback.cc  RCSVelAdapterPlayback.hh  README.txt  ROSAdapter.hh  ROSNode.cc  WavefrontPlanner.cc  WavefrontPlanner.hh  ac.init.nddl  clean.0.exec.nddl  clean.0.wpc.nddl  demo_grasp_0.xml  exec.solver.cfg  grasp.0.ac.nddl  grasp.0.exec.nddl  handwave.ac.nddl  handwave.cfg  handwave.exec.nddl  installEnv.sh  make_trex  manifest.xml.old  map_helpers.h  pr2.model.rules.nddl  pr2.playback.cfg  pr2.sim.nddl  pr2.wpc.nddl  ros.cfg  run_fast  testCalcArmInverseKinematicsConstraint.cc  wpc.0.exec.nddl
deprecated/image_publisher/: CMakeLists.txt
deprecated/libKDL/: CMakeLists.txt  manifest.xml
deprecated/libTF/: CMakeLists.txt  manifest.xml
deprecated/old_mechanism_control/: CMakeLists.txt  manifest.xml
deprecated/random_utils/: CMakeLists.txt  manifest.xml
deprecated/ransac_ground_plane_extraction/: CMakeLists.txt  manifest.xml
deprecated/scan_utils/: CMakeLists.txt  manifest.xml
deprecated/trajectory_rollout/: CMakeLists.txt  manifest.xml
drivers/phase_space/: CMakeLists.txt  manifest.xml  owl.h  phase_space_node.cpp  phase_space_node.h
estimation/robot_pose_ekf/: CMakeLists.txt  manifest.xml  nonlinearanalyticconditionalgaussianodo.cpp  odom_estimation.cpp  odom_estimation.h  odom_estimation_node.cpp  odom_estimation_node.h  plotekf.m  robot_pose_ekf.launch  robot_pose_ekf.xml
grasp_module/grasp_learner/: CMakeLists.txt  manifest.xml
highlevel/highlevel_controllers/: CMakeLists.txt  manifest.xml
highlevel/robot_actions/: CMakeLists.txt  manifest.xml
highlevel/test_robot_actions/: CMakeLists.txt  manifest.xml
mapping/annotated_planar_patch_map/: CMakeLists.txt  ROS_BUILD_BLACKLIST  manifest.xml
mapping/cloud_io/: CMakeLists.txt  mainpage.dox  manifest.xml
mapping/cloud_kdtree/: CMakeLists.txt  mainpage.dox  manifest.xml
mapping/cloud_octree/: CMakeLists.txt  mainpage.dox  manifest.xml
mapping/collision_map/: CMakeLists.txt  collision_map.launch  collision_map.xml  collision_map_occ.launch  manifest.xml
mapping/door_handle_detector/: CMakeLists.txt  controllers.launch  door_handle_detector.launch  gripper_effort_right.control  manifest.xml  simple_door_handle_detector.launch
trajectory_rollout/: CMakeLists.txt  manifest.xml  rosconfig.cmake
trajectory_rollout/include/: map_cell.h  map_grid.h  trajectory.h  trajectory_controller.h
trajectory_rollout/msg/: GlobalPlan.msg  ScoreMap2D.msg  ScoreMapCell2D.msg
trajectory_rollout/scripts/: indefinite_nav.py  listen.py
trajectory_rollout/src/: governor_node.cpp  helmsman.cpp  map_cell.cpp  map_grid.cpp  tests.cpp  trajectory.cpp  trajectory_controller.cpp
trajectory_rollout/test/: utest.cpp
(+14050 files in other folders)
