cmake_minimum_required(VERSION 2.6)
include(rosbuild)
rospack(pr2_controllers)
genmsg()
gensrv()
rospack_add_library(pr2_controllers src/base_controller.cpp src/laser_scanner_controller.cpp)
rospack_add_executable(testBaseController test/test_base_controller.cpp)
target_link_libraries(testBaseController pr2_controllers)
