cmake_minimum_required(VERSION 2.4.6)
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
rospack(libTF)

rospack_add_library(TF src/libTF.cpp src/Pose3DCache.cpp src/Pose3D.cpp)
rospack_add_executable(simpletest src/test/main.cpp)
target_link_libraries(simpletest TF)
rospack_add_executable(testtf src/test/testtf.cc)
target_link_libraries(testtf TF)
rospack_add_executable(test_interp src/test/test_interp.cc)
target_link_libraries(test_interp TF)
rospack_add_executable(testMatrix src/test/testMatrix.cc)
target_link_libraries(testMatrix TF)
rospack_add_executable(testMatrixQuaternion src/test/testMatrixQuaternion.cc)
target_link_libraries(testMatrixQuaternion TF)
rospack_add_gtest(pose3d_unittest test/pose3d_unittest.cpp src/Pose3D.cpp)
target_link_libraries(pose3d_unittest TF)
rospack_add_gtest(libTF_unittest test/libTF_unittest.cpp)
target_link_libraries(libTF_unittest TF)
